chore: Use virtual threads