@@ -31,7 +31,8 @@ public class EventBusImpl implements EventBus {
      */
     protected WeakHashMap<EventBusListener, Object> eventListeners = new WeakHashMap<>();
 
-    private final ExecutorService executor = Executors.newFixedThreadPool(5);
+    private final ExecutorService executor = Executors.newFixedThreadPool(5,
+            Thread.ofVirtual().factory());
 
     public static synchronized EventBus getInstance() {
         if (instance == null) {
